src/app/popover/implementations/UserEditor.module.scss
.userEditor {
    @include flex(column);
    color: var(--c-text-primary);

    > h1 {
        @include font(600, 0.85em);
        margin: 0.75em;
    }
}

.form {
    @include flex(row);

    > section {
        h3 {
            @include font(600, 13px);
        }

        .header {
            @include flex(row, center, space-between);
            margin-bottom: 0.5em;
            height: 1.5em;
        }

        &:not(:first-child) {
            border-left: 2px solid var(--c-background-secondary);
            margin-left: 1em;
            padding-left: 1em;
        }
    }

    .fields {
        > *:not(:first-child) {
            margin-top: 0.5em;
        }
    }
}

.restrictions {
    .options {
        transition: visibility 0s 1.5s;
        visibility: hidden;

        &[data-visible] {
            transition: visibility 0s 0s;
            visibility: visible;

            > * {
                @include transition_sequence(3, 0.125s);
                opacity: 1;
            }
        }

        > * {
            @include transition_sequence(3, 0.125s, true);
            transition: opacity 0.3s;
            opacity: 0;
        }
    }
}

.actionBar {
    @include flex(row, center);
    margin-top: 1em;

    > button:last-child {
        margin-left: auto;
    }
}

.accountLocked {
    @include font(600, 0.75em);
    @include flex(row, center, center);
    background: var(--c-red);
    color: var(--c-text-secondary);
    padding: 0 0.75em;
    border-radius: 0.25em;
    height: 2em;
    margin: -2.75em 0 0.75em 0;
    opacity: 0;
    transition: all 0.3s;

    &[data-visible] {
        margin-top: 0;
        opacity: 1;
    }
}

